fixed navigation issue on mobile screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,13 @@ html {
     flex-direction: column;
     height: 100vh;
 }
+@media (max-width:767px) {
+    .mainWrapper {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+    }
+}
 body {
     font-size: 16px;
     font-weight: 300;
